// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Anchor Disabled anchor link 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  external link
</a>
`;

exports[`Render Anchor Disabled anchor link dark 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  external link
</a>
`;

exports[`Render Anchor External anchor link 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_blank"
>
  external link
  <i
    className=""
    href="https://www.google.com/"
    size="sm"
  >
    <svg
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z"
      />
      <path
        d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z"
      />
    </svg>
  </i>
</a>
`;

exports[`Render Anchor External anchor link dark 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_blank"
>
  external link
  <i
    className=""
    href="https://www.google.com/"
    size="sm"
  >
    <svg
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z"
      />
      <path
        d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z"
      />
    </svg>
  </i>
</a>
`;

exports[`Render Anchor Renders with no styles 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  simple link
</a>
`;

exports[`Render Anchor Renders with no styles dark 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  simple link
</a>
`;
